test_regress/t/t_process_notiming.out
%Error-NOTIMING: t/t_process.v:26:18: process::self() requires --timing
                                    : ... note: In instance 't'
   26 |     p = process::self();
      |                  ^~~~
                 ... For error description see https://verilator.org/warn/NOTIMING?v=latest
%Error-NOTIMING: t/t_process.v:27:11: process::status() requires --timing
                                    : ... note: In instance 't'
   27 |     if (p.status() != process::RUNNING) $stop;
      |           ^~~~~~
%Error-NOTIMING: t/t_process.v:28:11: process::status() requires --timing
                                    : ... note: In instance 't'
   28 |     if (p.status() == process::WAITING) $stop;
      |           ^~~~~~
%Error-NOTIMING: t/t_process.v:29:11: process::status() requires --timing
                                    : ... note: In instance 't'
   29 |     if (p.status() == process::SUSPENDED) $stop;
      |           ^~~~~~
%Error-NOTIMING: t/t_process.v:30:11: process::status() requires --timing
                                    : ... note: In instance 't'
   30 |     if (p.status() == process::KILLED) $stop;
      |           ^~~~~~
%Error-NOTIMING: t/t_process.v:31:11: process::status() requires --timing
                                    : ... note: In instance 't'
   31 |     if (p.status() == process::FINISHED) $stop;
      |           ^~~~~~
%Error-NOTIMING: t/t_process.v:33:14: process::kill() requires --timing
                                    : ... note: In instance 't'
   33 |     if (0) p.kill();
      |              ^~~~
%Error-NOTIMING: t/t_process.v:34:14: process::await() requires --timing
                                    : ... note: In instance 't'
   34 |     if (0) p.await();
      |              ^~~~~
%Error-NOTIMING: t/t_process.v:35:14: process::suspend() requires --timing
                                    : ... note: In instance 't'
   35 |     if (0) p.suspend();
      |              ^~~~~~~
%Error-NOTIMING: t/t_process.v:36:14: process::resume() requires --timing
                                    : ... note: In instance 't'
   36 |     if (0) p.resume();
      |              ^~~~~~
%Error-NOTIMING: t/t_process.v:38:7: process::srandom() requires --timing
                                   : ... note: In instance 't'
   38 |     p.srandom(0);
      |       ^~~~~~~
%Error-NOTIMING: t/t_process.v:39:7: process::set_randstate() requires --timing
                                   : ... note: In instance 't'
   39 |     p.set_randstate(p.get_randstate());
      |       ^~~~~~~~~~~~~
%Error-NOTIMING: t/t_process.v:39:23: process::get_randstate() requires --timing
                                    : ... note: In instance 't'
   39 |     p.set_randstate(p.get_randstate());
      |                       ^~~~~~~~~~~~~
%Error: Exiting due to
